@@ -6,9 +6,6 @@ import org.xi.maple.datacalc.flink.model.MapleDataConfig;
 import org.xi.maple.datacalc.flink.model.MaplePluginConfig;
 import org.xi.maple.datacalc.flink.sink.JdbcSink;
 
-import javax.validation.Validation;
-import javax.validation.Validator;
-import javax.validation.ValidatorFactory;
 import java.io.IOException;
 import java.lang.reflect.ParameterizedType;
 import java.nio.file.Files;
@@ -24,14 +21,14 @@ public class PluginUtilTests {
         Class<?> configType = (Class<?>) genericSuperclass.getActualTypeArguments()[0];
         System.out.println(configType);
 
-        String s = Files.readString(Paths.get("/home/xi/Projects/github/maple/examples/flink-data-array.json"));
-        MapleArrayData mapleData = MapleArrayData.getData(s);
+        byte[] data = Files.readAllBytes(Paths.get("/home/xi/Projects/github/maple/examples/flink-data-array.json"));
+        MapleArrayData mapleData = MapleArrayData.getData(new String(data));
         System.out.println(mapleData);
 
 
         List<MaplePlugin> executions = new ArrayList<>(mapleData.getPlugins().length);
         for (MapleDataConfig dc : mapleData.getPlugins()) {
-            MaplePlugin<MaplePluginConfig> execution = PluginUtil.createExecution(dc.getType(), dc.getName(), dc.getConfig(), null, null);
+            MaplePlugin<MaplePluginConfig> execution = PluginUtil.createExecution(dc.getType(), dc.getName(), dc.getConfig(), null);
             executions.add(execution);
         }
         System.out.println(executions);
